# docs/swagger.yaml
@@ -1,5 +1,47 @@
 basePath: /api
 definitions:
+  github_com_ZaphCode_clean-arch_src_api_dtos.CategoriesRespOKDTO:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/github_com_ZaphCode_clean-arch_src_api_dtos.CategoryDTO'
+        type: array
+      message:
+        example: Data retrived!
+        type: string
+      status:
+        example: success
+        type: string
+    type: object
+  github_com_ZaphCode_clean-arch_src_api_dtos.CategoryDTO:
+    properties:
+      created_at:
+        example: 1674405183
+        type: integer
+      id:
+        example: 8ded83fe-93c8-11ed-ab0f-d8bbc1a27048
+        type: string
+      name:
+        example: clothes
+        maxLength: 15
+        type: string
+      updated_at:
+        example: 1674405181
+        type: integer
+    required:
+    - name
+    type: object
+  github_com_ZaphCode_clean-arch_src_api_dtos.CategoryRespOKDTO:
+    properties:
+      data:
+        $ref: '#/definitions/github_com_ZaphCode_clean-arch_src_api_dtos.CategoryDTO'
+      message:
+        example: Data retrived!
+        type: string
+      status:
+        example: success
+        type: string
+    type: object
   github_com_ZaphCode_clean-arch_src_api_dtos.DetailRespErrDTO:
     properties:
       detail:
@@ -11,6 +53,15 @@ definitions:
       status:
         example: failure
         type: string
+    type: object
+  github_com_ZaphCode_clean-arch_src_api_dtos.NewCategoryDTO:
+    properties:
+      name:
+        example: clothes
+        maxLength: 15
+        type: string
+    required:
+    - name
     type: object
   github_com_ZaphCode_clean-arch_src_api_dtos.NewProductDTO:
     properties:
@@ -35,6 +86,8 @@ definitions:
         - https://example.com/image2.png
         items:
           type: string
+        maxItems: 10
+        minItems: 1
         type: array
       name:
         example: Black T-Shirt Addidas
@@ -52,6 +105,7 @@ definitions:
         - addidas
         items:
           type: string
+        maxItems: 6
         type: array
     required:
     - description
@@ -126,6 +180,8 @@ definitions:
         - https://example.com/image2.png
         items:
           type: string
+        maxItems: 10
+        minItems: 1
         type: array
       name:
         example: Black T-Shirt Addidas
@@ -143,6 +199,7 @@ definitions:
         - addidas
         items:
           type: string
+        maxItems: 6
         type: array
       updated_at:
         example: 1674405181
@@ -612,6 +669,67 @@ paths:
       summary: Sign up
       tags:
       - auth
+  /category/all:
+    get:
+      consumes:
+      - application/json
+      description: Get all categories
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_ZaphCode_clean-arch_src_api_dtos.CategoriesRespOKDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_ZaphCode_clean-arch_src_api_dtos.DetailRespErrDTO'
+      security:
+      - BearerAuth: []
+      summary: Get categories
+      tags:
+      - category
+  /category/create:
+    post:
+      consumes:
+      - application/json
+      description: Create category
+      parameters:
+      - description: category data
+        in: body
+        name: category_data
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_ZaphCode_clean-arch_src_api_dtos.NewCategoryDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/github_com_ZaphCode_clean-arch_src_api_dtos.CategoryRespOKDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_ZaphCode_clean-arch_src_api_dtos.ValidationRespErrDTO'
+        "406":
+          description: Not Acceptable
+          schema:
+            $ref: '#/definitions/github_com_ZaphCode_clean-arch_src_api_dtos.RespErrDTO'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/github_com_ZaphCode_clean-arch_src_api_dtos.DetailRespErrDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_ZaphCode_clean-arch_src_api_dtos.DetailRespErrDTO'
+      security:
+      - BearerAuth: []
+      summary: Create new category
+      tags:
+      - category
   /product/all:
     get:
       consumes:
