# src/api/handlers/category_handler.go
@@ -8,60 +8,60 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-type ProductHandler struct {
+type CategoryHandler struct {
 	shared.Responder
 	prodSvc domain.ProductService
 	catSvc  domain.CategoryService
 	vldSvc  validation.ValidationService
 }
 
-func NewProdutHandler(
+func NewCategoryHandler(
 	prodSvc domain.ProductService,
 	catSvc domain.CategoryService,
 	vldSvc validation.ValidationService,
-) *ProductHandler {
-	return &ProductHandler{
+) *CategoryHandler {
+	return &CategoryHandler{
 		prodSvc: prodSvc,
 		catSvc:  catSvc,
 		vldSvc:  vldSvc,
 	}
 }
 
-// * Get products handler
-// @Summary      Get products
-// @Description  Get all products
-// @Tags         products
+// * Get categories handler
+// @Summary      Get categories
+// @Description  Get all categories
+// @Tags         category
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  dtos.ProductsRespOKDTO
+// @Success      200  {object}  dtos.CategoriesRespOKDTO
 // @Failure      500  {object}  dtos.DetailRespErrDTO
-// @Router       /product/all [get]
-func (h *ProductHandler) GetProducts(c *fiber.Ctx) error {
-	ps, err := h.prodSvc.GetAll()
+// @Router       /category/all [get]
+func (h *CategoryHandler) GetCategories(c *fiber.Ctx) error {
+	cs, err := h.catSvc.GetAll()
 
 	if err != nil {
-		return h.RespErr(c, 500, "error getting products", err.Error())
+		return h.RespErr(c, 500, "error getting categories", err.Error())
 	}
 
-	return h.RespOK(c, 200, "all products", ps)
+	return h.RespOK(c, 200, "all products", cs)
 }
 
-// * Create product handler
-// @Summary      Create new product
-// @Description  Create product
-// @Tags         products
+// * Create category handler
+// @Summary      Create new category
+// @Description  Create category
+// @Tags         category
 // @Accept       json
 // @Produce      json
 // @Security     BearerAuth
-// @Param        product_data  body dtos.NewProductDTO true "product data"
-// @Success      201  {object}  dtos.ProductRespOKDTO
+// @Param        category_data  body dtos.NewCategoryDTO true "category data"
+// @Success      201  {object}  dtos.CategoryRespOKDTO
 // @Failure      500  {object}  dtos.DetailRespErrDTO
 // @Failure      422  {object}  dtos.DetailRespErrDTO
 // @Failure      406  {object}  dtos.RespErrDTO
 // @Failure      400  {object}  dtos.ValidationRespErrDTO
-// @Router       /product/create [post]
-func (h *ProductHandler) CreateProducts(c *fiber.Ctx) error {
-	body := dtos.NewProductDTO{}
+// @Router       /category/create [post]
+func (h *CategoryHandler) CreateCategory(c *fiber.Ctx) error {
+	body := dtos.NewCategoryDTO{}
 
 	if err := c.BodyParser(&body); err != nil {
 		return h.RespErr(c, 422, "error parsing the request body", err.Error())
@@ -71,21 +71,21 @@ func (h *ProductHandler) CreateProducts(c *fiber.Ctx) error {
 		return h.RespValErr(c, 400, "one or more fields are invalid", err)
 	}
 
-	cat, err := h.catSvc.GetByName(body.Category)
+	ec, err := h.catSvc.GetByName(body.Name)
 
 	if err != nil {
 		return h.RespErr(c, 500, "error getting category", err.Error())
 	}
 
-	if cat == nil {
-		return h.RespErr(c, 406, "That category does'nt exist")
+	if ec != nil {
+		return h.RespErr(c, 406, "That category already exists")
 	}
 
-	prod := body.AdaptToProduct()
+	cat := body.AdaptToCategory()
 
-	if err := h.prodSvc.Create(&prod); err != nil {
-		return h.RespErr(c, 500, "error creating product", err.Error())
+	if err := h.catSvc.Create(&cat); err != nil {
+		return h.RespErr(c, 500, "error creating category", err.Error())
 	}
 
-	return h.RespOK(c, 201, "product created", prod)
+	return h.RespOK(c, 201, "category created", cat)
 }
